--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,7 @@ body {
 .feature {
   height: 800px;
   width: 100vw;
-  background-image: url('src/img/cover.jpg');
+  background-image: url('./img/cover.jpg');
   background-size: cover;
   background-position: bottom;
 }
@@ -131,4 +131,22 @@ body {
 
 .main-items-cnt {
   padding: 0px !important;
+}
+
+
+.featured-restaurant {
+  height: 150px;
+  width: 100vw;
+  background-image: url('./img/cover.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.checkout-item-div {
+  height: 80px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
 }
