--- a/src/App.css
+++ b/src/App.css
@@ -150,3 +150,11 @@ body {
   justify-content: flex-start;
   align-items: center;
 }
+
+.profile-pic {
+  height: 150px;
+  width: 150px;
+  object-fit: cover;
+  border-radius: 15px;
+  margin-bottom: 20px;
+}
